# mbo

./: .clang-format  .gitignore  .travis.yml  Amplitude.h  CMakeLists.txt  ElemOpImpl.c  ElemOpImpl.h  Makefile  ProdSpaceImpl.c  ProdSpaceImpl.h  README.md  TensProdOp.h  TensProdOpImpl.c  TensProdOpImpl.h  appveyor.yml  config.h.in  doxyfile.in  index.html  params.json  test_BraKet.c  test_ElemOp.c  test_ProdSpace.c  test_TensProdOp.c
cmake/: AddCCompilerFlagIfSupported.cmake  AddCLinkerFlagIfSupported.cmake
cmake/trycompile/: explicitMathLibNotNeeded.c
doc/: CMakeLists.txt  SimpleExample.c  benchmarks.dox  core.dox  examples.dox  main.dox  utilities.dox
docs/: CTestTestfile.cmake  ComputeMatrix.dox.c  Makefile  MatVecBenchmark.dox.c  OpenMP.dox.c  TavisCummings.dox.c  Vectors.dox.c  cmake_install.cmake
docs/html/: ComputeMatrix-example.html  ComputeMatrix_8c-example.html  MboAmplitude_8h.html  MboAmplitude_8h_source.html  MboElemOp_8h.html  MboElemOp_8h_source.html  MboErrors_8h.html  MboErrors_8h_source.html  MboIndices_8h.html  MboIndices_8h_source.html  MboNonZeroEntry_8h.html  MboNonZeroEntry_8h_source.html  MboNumOp_8h.html  MboNumOp_8h_source.html  MboNumSubMatrix_8h.html  MboNumSubMatrix_8h_source.html  MboProdSpace_8h.html  MboProdSpace_8h_source.html  MboTensorOp_8h.html  MboTensorOp_8h_source.html  MboVec_8h.html  MboVec_8h_source.html  Mbo_8h.html  Mbo_8h_source.html  OpenMP_8c-example.html  SimpleExample_8c-example.html  TavisCummings_8c-example.html  Vectors_8c-example.html  annotated.html  classes.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  examples.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_enum.html  (+33 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_69.html  all_6d.html  all_8.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_6d.html  enums_0.js  enums_6d.html  files_0.js  files_6d.html  functions_0.js  functions_6d.html  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  search.js  typedefs_0.js  typedefs_6d.html  variables_1.js  variables_6d.html  variables_6e.html  variables_72.html  variables_76.html
examples/: Benchmark.c  CMakeLists.txt  ComputeMatrix.c  MatVecBenchmark.c  OpenMP.c  ProgramToDoxygen.hs  TavisCummings.c  Vectors.c
include/: Amplitude.h  CMakeLists.txt  ElemOp.h  Errors.h  Mbo.h  MboAmplitude.h  MboElemOp.h  MboErrors.h  MboIndices.h  MboNonZeroEntry.h  MboNumOp.h  MboNumSubMatrix.h  MboProdSpace.h  MboSys.h  MboTensorOp.h  MboVec.h  ProdSpace.h  Quo.h  TensProdOp.h  TensorOp.h
notes/: Todo.txt
src/: BraKet.h  CMakeLists.txt  ElemOp.c  ElemOpImpl.c  ElemOpImpl.h  Embedding.c  Embedding.h  Integrator.c  Integrator.h  MboElemOp.c  MboList.c  MboList.h  MboListImpl.c  MboListImpl.h  MboNumOp.c  MboNumOpPrivate.h  MboNumSubMatrix.c  MboProdSpace.c  MboTensorOp.c  MboTensorOpPrivate.c  MboTensorOpPrivate.h  MboVec.c  NonZeroEntry.h  ProdSpace.c  ProdSpaceImpl.c  SimpleTOp.c  SimpleTOp.h  SimpleTOpTraversal.c  SimpleTOpTraversal.h  TensProdOp.c  TensProdOpImpl.c  TensProdOpImpl.h  TensorOp.c  TestUtils.h  Tile.c  Tile.h  Utilities.c  Utilities.h  test_ElemOp.c  test_MboList.c  (+3 more)
tests/: CMakeLists.txt  test_DenseMatrices.cpp  test_Embedding.cpp  test_Integrator.cpp  test_MboElemOp.c  test_MboElemOp.cpp  test_MboNumOp.cpp  test_MboNumSubMatrix.cpp  test_MboProdSpace.c  test_MboProdSpace.cpp  test_MboTensorOp.c  test_MboTensorOp.cpp  test_MboVec.c  test_MboVec.cpp  test_SimpleTOpTraversal.cpp  test_SimpleTOps.cpp  test_SmallOps.cpp  test_Tile.cpp
utilities/: ProgramToDoxygen.hs  download_gtest.cmd
